Fix button opacity in animations for improved visibility and interaction

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -459,6 +459,7 @@ button {
   font-weight: 700;
   color: var(--text-color);
   overflow: hidden;
+
   width: 500vw;
   margin-left: -200vw;
   opacity: .01;
@@ -522,7 +523,7 @@ button {
   100% {
     letter-spacing: 4px;
     word-spacing: 1vw;
-    opacity: .2;
+    opacity: 1;
   }
 }
 
@@ -534,6 +535,6 @@ button {
 
   100% {
     top: 3.5vw;
-    opacity: .2;
+    opacity: 1;
   }
 }
